fixed chart axis issue on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -171,7 +171,7 @@ nav {
 }
 
 #myCarousel{
-    width: 33%;
+    width: 40%;
     margin: auto;
 }
 
